Fix episodes index spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1501,8 +1501,8 @@ $topbar-dropdown-bg: $topbar-bg;
 @import '*';
 
 // Override to handle spacing bug
-.row {
-  .row {
-    width: 100%;
-  }
-}
+// .row {
+//   .row {
+//     width: 100%;
+//   }
+// }
