--- a/app/assets/stylesheets/episodes.scss
+++ b/app/assets/stylesheets/episodes.scss
@@ -1,10 +1,17 @@
 .episodes {
   .episode-summary {
     background: $jet;
+    min-height: 260px;
+
+    ul {
+      margin-left: 0;
+    }
 
     .artist-name {
       color: $aluminum;
       font-size: .8rem;
+      list-style-type: none;
+      margin-top: 10px;
     }
 
     time {
